# alice-viewer-opennurbs

./: $filename  .gitignore  API_KEYS.txt  API_KEYS.txt.example  CMakeLists.txt  New Text Document.txt  README.md  Z_ORC_architect_SOP.md  Z_ORC_executor_SOP.md  Z_ORC_high_level_prompt.txt  Z_ORC_orchestrator.ps1  analyze_images.py  api_log.txt  app_stdout.txt  architect_SOP.md  audit_log.txt  build_and_run.bat  build_and_run.ps1  build_env_config.json  executor_SOP.md  executor_report.json  gemini CLI_ https - black picture resolution..txt  gemini api_https_gemini.txt  gemini session_frame buffer and gemini client.txt  gemini.md  handoff.trigger  high_level_prompt.txt  imagen.txt  imgui.ini  init_prompt.txt  instructions.txt  locations.json  log.txt  orchestrator.ps1  prompt.txt  reviewer.md  root.json  run_all.bat  run_log.txt  run_log10.txt  (+29 more)
.agents/: architect.md  executor.md  executor_original.md  generalist.md  last_tidy_run.txt  tidy.md
.github/workflows/: build.yml  ci.yml  cmake-multi-platform.yml  ubuntu.yml  windows.yml
.opencode/commands/: fix.md
AGENT_HEADER_GEN/: AliceMemory.h  SelectionContext.h  SpatialGrid.h  gemini.md  startAgent.bat  test_runner.cpp
AGENT_HEADER_GEN/knowledge/: AliceViewer.cpp  AliceViewer.h  SelectionContext.h  main.cpp  main.cpp.tmp  sketch.cpp
AGENT_HEADER_GEN/state_snapshots/: snapshot_20260326_122310.xml  snapshot_20260326_124522.xml  snapshot_20260326_135830.xml  snapshot_20260327_115000.xml  snapshot_20260327_124000.xml  snapshot_20260327_125000.xml
AGENT_HEADER_GEN/tmp/: AliceViewer.cpp.tmp  AliceViewer.h.tmp  sketch.cpp.tmp
DELETE FOLDER/: diff.txt  diff1.txt
OUTPUT_VERIFY/: log.txt
console logs/: Alice viewer_ MSAA.txt  Alice viewer_ MSAA_1.txt  Alice viewer_ MSAA_2.txt  Alice viewer_ MSAA_3.txt  GEM_SUB_AGENTS_CESIUM_GEPR_1.txt  GEM_SUB_AGENTS_CESIUM_GEPR_2.txt  GEM_SUB_AGENTS_CESIUM_OSM_INTEGRATTION_1.txt  GEM_SUB_AGENTS_CESIUM_log1.txt  GEM_SUB_AGENTS_CESIUM_log10.txt  GEM_SUB_AGENTS_CESIUM_log11.txt  GEM_SUB_AGENTS_CESIUM_log12.txt  GEM_SUB_AGENTS_CESIUM_log13.txt  GEM_SUB_AGENTS_CESIUM_log14.txt  GEM_SUB_AGENTS_CESIUM_log2.txt  GEM_SUB_AGENTS_CESIUM_log3.txt  GEM_SUB_AGENTS_CESIUM_log5.txt  GEM_SUB_AGENTS_CESIUM_log6.txt  GEM_SUB_AGENTS_CESIUM_log7.txt  GEM_SUB_AGENTS_CESIUM_log8.txt  GEM_SUB_AGENTS_CESIUM_log9.txt  Hardened_Orchesrator_ps_log_1.txt  Hardened_Orchesrator_ps_log_2.txt  Hardened_Orchesrator_ps_log_3.txt  Hardened_Orchesrator_ps_log_4.txt  Hardened_Orchesrator_ps_log_5.txt  Hardened_Orchesrator_ps_log_6.txt  Hardened_Orchesrator_ps_log_6_cesiumOSM.txt  Hardened_Orchesrator_ps_log_7.txt  Orchesrator test.txt  Orchesrator test_1.txt  Orchesrator_ps_log.txt  Orchesrator_ps_log_1.txt  Orchesrator_ps_log_2.txt  cesium_gepr_and_osm_1.txt  cesium_gepr_and_osm_2.txt  cesium_gepr_and_osm_3.txt  gemini api_imagen_https_ci_cd.txt  gemini session_frame buffer and gemini client_1.txt  run_log2.txt  run_log3.txt  (+4 more)
docs/: AI_CAD_Rendering_Specs.md  ALICE_cad_rendering_pipeline_technical_reference.md  ALICE_terminology.md  ANTI_GRAVITY_CESIUM_GEPR_SUCCESS.md  ARCHITECTURE.MD  ARCHITECTURE_POWERSHELL.MD  CI_TROUBLESHOOTING_LOGS.md  CaptureHIghResStencils_potential Issues.md  CesiumGEPR_Success_Reference.md  CesiumGEPR_Troubleshooting_Reference.md  Cold_Start_Reference.md  Geospatial Engine & Agent Orchestration.md  Macro_Gated_Architecture.md  PIPELINE_ARCHITECTURE.md  TERMINAL_autonomous_loop_architecture.md  TERMINAL_gepr_osm_agent_prompt.md  TERMINAL_unit_test.prompt  WISE_Cesium_osm_gepr_integration.md  WISE_build_optimisation.md  WISE_cesium_gepr_performance_history.md  WISE_cesium_native_discoveries.md  WISE_cesium_osm_asset_pipeline_reference.md  WISE_cesium_osm_gepr_integration.md  WISE_geospatial_engine_architecture.md  WISE_pipeline_stabilization_summary.md  autonomous_loop_architecture.md  session_summary_2026_04_21.md
docs/code snippets/: ApiKeyReader.h  ApiKeyReaderTest.h  CesiumIonFetcher.h  CesiumMinimalPipeline.h  CesiumMinimalTest_AlmostWorking.h  CesiumTileFetcher.h  CesiumTileParser.h  CesiumTransforms.h  ECEFTest.h  (+7 more)
include/: AABBDraw.h  AABBTest.h  AliceGeminiClient.h  AliceJson.h  AliceKeys.h  AliceMath.h  AliceMemory.h  AliceNetwork.h  AliceViewer.h  ApiKeyReader.h  CADPipelineTest.h  CachedMeshComparisonTest.h  CesiumGEPR.h  CesiumGEPR_Alpha.h  CesiumGEPR_Beta.h  CesiumMinimalTest.h  CesiumStPaulsTest.h  Cesium_cachedHighResTest.h  DebugRender.h  DebugShader.h  GLBLoader.h  GLBTest.h  HighResCaptureTest.h  MeshPrimitive.h  MockCathedral.h  MockLondon.h  NormalShader.h  PhongShader.h  RhinoIO.h  RhinoLoader.h  SSAO.h  SelectionContext.h  SpatialGrid.h  StPaulsCaptureTest.h  StencilVerificationTest.h  TextureCache.h  TilePBRShader.h  Tileset.h  TilesetLoader.h  TilesetTest.h  (+2 more)
src/: APITest.cpp  AliceOrchestrator.cpp  AliceViewer.cpp  RhinoIO.cpp  TilesetMicroTest.cpp  main.cpp  sketch.cpp
state_snapshots/: snapshot_20260331_204100.xml  snapshot_20260401_031500.xml  snapshot_20260401_043000.xml  snapshot_20260401_130000.xml  snapshot_20260401_140000.xml  snapshot_20260401_150000.xml  snapshot_20260401_160000.xml  snapshot_20260401_170000.xml  snapshot_20260401_173000.xml  snapshot_20260401_174500.xml  snapshot_20260401_180000.xml  snapshot_20260402_002500.xml  snapshot_20260410_143500.xml  snapshot_20260410_154500.xml  snapshot_20260410_160000.xml  snapshot_20260410_163000.xml  snapshot_20260411_103000.xml  snapshot_20260414_100000.xml  snapshot_20260414_110000.xml  snapshot_20260414_120000.xml  snapshot_20260414_154500.xml  snapshot_20260414_164848.xml  snapshot_20260414_171238.xml  snapshot_20260414_172110.xml  snapshot_20260414_181023.xml  snapshot_20260414_182000.xml  snapshot_20260414_182846.xml  snapshot_20260414_183000.xml  snapshot_20260414_184500.xml  snapshot_20260414_185500.xml  snapshot_20260414_190500.xml  snapshot_20260414_200000.xml  snapshot_20260414_201500.xml  snapshot_20260414_210000.xml  snapshot_20260414_211500.xml  snapshot_20260414_212800.xml  snapshot_20260414_220000.xml  snapshot_20260414_222638.xml  snapshot_20260414_230000.xml  snapshot_20260414_233000.xml  (+17 more)
(+8 files in other folders)
